crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__source_trait_default_specialization.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Eq exposing (..)\nmain = neq () ()\n"
---
--- core
let fromBool#6 : bool -> bool = \value#9 : bool -> value#9 in
let eq#7 : unit -> unit -> bool = \arg#10 : unit arg#11 : unit -> let match#13 : unit = arg#10 in
let match#12 : unit = arg#11 in
fromBool#6 true in
let neq#2 : 'erased -> 'erased -> bool = \a#4 : 'erased b#5 : 'erased -> case@Bool eq#7 a#4 b#5 of
  True -> fromBool#6 false
  False -> fromBool#6 true in
let fromUnit#3 : unit -> unit = \value#8 : unit -> value#8 in
let main#1 : bool = neq#2 (fromUnit#3 ()) (fromUnit#3 ()) in
main#1
--- uplc
(program 1.1.0
  [(lam i0
    [(lam i1
      [(lam i2
        [(lam i3 [(lam i4 i4) [[i2 [i3 (con unit ())]] [i3 (con unit ())]]])
          (lam i3 i3)])
        (lam i2 (lam i3 (case [[i1 i2] i3] [i0 (con bool True)] [i0 (con bool False)])))])
      (lam i1 (lam i2 (case i1 (case i2 [i0 (con bool True)]))))])
    (lam i0 i0)])
